test/integration/statsFormatter/statsCasesFixture/babel-loader-syntax-error/errors.webpack-4.txt
Error in ./entry.js

  Syntax error: Unexpected token (2:0)
  
    1 | const x = {
  > 2 | 
      | ^